--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "efc3a559",
+   "id": "ad1a2c14",
    "metadata": {},
    "source": [
     "# Data Structures And Algorithms Study (Python)\n",
     "#### Utilizing https://www.techinterviewhandbook.org/algorithms/study-cheatsheet/ \n",
-    "Entries arranged in priority order (High -> Mid -> Low)"
+    "Entries arranged in priority order (High -> Mid -> Low) <br>\n",
+    "python -m notebook to open"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e6515dbe",
+   "id": "6243981d",
    "metadata": {},
    "source": [
     "***\n",
@@ -27,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f965048c",
+   "id": "597ed7a7",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "581d1e77",
+   "id": "3cec5ddf",
    "metadata": {},
    "source": [
     "***\n",
@@ -77,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd9c5db6",
+   "id": "892984af",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c56b72e6",
+   "id": "df0dc7fd",
    "metadata": {},
    "source": [
     "***\n",
@@ -126,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f7dcd45",
+   "id": "ffa5bc3d",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2841dc0f",
+   "id": "47f06ff7",
    "metadata": {},
    "source": [
     "***\n",
@@ -189,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3fc25107",
+   "id": "73ca27a8",
    "metadata": {},
    "outputs": [
     {
@@ -225,47 +226,246 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60fc2af0",
+   "id": "04d45bc4",
    "metadata": {},
    "source": [
     "***\n",
     "# Tree\n",
-    "https://www.techinterviewhandbook.org/algorithms/tree/ <br><br>"
+    "https://www.techinterviewhandbook.org/algorithms/tree/ <br><br>\n",
+    "A tree is an undirected and connected acyclic graph. There are no cycles or loops. Each node can be like the root node of its own subtree, making recursion a useful technique for tree traversal. <br>\n",
+    "Questions usually BINARY trees as opposed to ternary (3 children) or N-ary (N children) trees. <br><br>\n",
+    "<b>Complete</b> binary tree - every level, except possibly the last, is completely filled, and all nodes in the last level are as far left as possible. <br>\n",
+    "<b>Balanced</b> binary tree - the left and right subtrees of every node differ in height by no more than 1. <br><br>\n",
+    "\n",
+    "<b>Traversals</b> <br>\n",
+    "<b>In-order:</b> Left -> Root -> Right [INSUFFICIENT to uniquely serialize a tree. Additionally need pre or post order]<br>\n",
+    "<b>Pre-order:</b> Root -> Left -> Right <br>\n",
+    "<b>Post-order:</b> Left -> Right -> Root\n",
+    "\n",
+    "\n",
+    "##### Binary Search Tree (BST)\n",
+    "In-order traversal of a BST will give you all elements in order. <br>\n",
+    "\n",
+    "<b>Use recursion</b>: Used when a subtree problem can solve entire problem. Always check for base case (null node) <br>\n",
+    "<b>Traverse by Level</b>: Use breadth-first search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "74e86e02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 23,
+   "id": "71824491",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preorder traversal (Rt L R)\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "3\n",
+      "6\n",
+      "7\n",
+      "\n",
+      "Inorder traversal (L Rt R)\n",
+      "4\n",
+      "2\n",
+      "5\n",
+      "1\n",
+      "6\n",
+      "3\n",
+      "7\n",
+      "\n",
+      "Postorder traversal (L R Rt)\n",
+      "4\n",
+      "5\n",
+      "2\n",
+      "6\n",
+      "7\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Node class\n",
+    "class Node:\n",
+    "    def __init__(self, key): #nodes have a value with a left and right node pointer\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        self.val = key\n",
+    "    \n",
+    "def inorder(root): # Left -> Root -> Right (INORDER means root in middle, LRtR)\n",
+    "    if root:\n",
+    "        inorder(root.left)\n",
+    "        print(root.val)\n",
+    "        inorder(root.right)\n",
+    "\n",
+    "def preorder(root): # Root -> Left -> Right (PRE means Root first, RtLR)\n",
+    "    if root:\n",
+    "        print(root.val)\n",
+    "        preorder(root.left)\n",
+    "        preorder(root.right)\n",
+    "\n",
+    "def postorder(root): # Left -> Right -> Root (POST means Root last, LRRt)\n",
+    "    if root:\n",
+    "        postorder(root.left)\n",
+    "        postorder(root.right)\n",
+    "        print(root.val)\n",
+    "\n",
+    "            \n",
+    "# Initialize a tree\n",
+    "root = Node(1)\n",
+    "root.left = Node(2)\n",
+    "root.right = Node(3)\n",
+    "root.left.left = Node(4)\n",
+    "root.left.right = Node(5)\n",
+    "root.right.left = Node(6)\n",
+    "root.right.right = Node(7)\n",
+    "print(\"Preorder traversal (Rt L R)\") \n",
+    "preorder(root)\n",
+    "print(\"\\nInorder traversal (L Rt R)\")\n",
+    "inorder(root) \n",
+    "print(\"\\nPostorder traversal (L R Rt)\") \n",
+    "postorder(root)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "adf9e816",
+   "id": "0874a7c6",
    "metadata": {},
    "source": [
     "***\n",
     "# Graph\n",
-    "https://www.techinterviewhandbook.org/algorithms/graph/ <br><br>"
+    "https://www.techinterviewhandbook.org/algorithms/graph/ <br><br>\n",
+    "\n",
+    "A graph is a structure containing a set of objects (nodes or vertices) where there can be edges between these nodes/vertices. Edges can be directed or undirected and can optionally have values (a weighted graph). Trees are undirected graphs in which any two vertices are connected by exactly one edge and there can be no cycles in the graph. <br><br>\n",
+    "graphs are commonly given in the input as 2D matrices where cells are the nodes and each cell can traverse to its adjacent cells (up/down/left/right) <br>\n",
+    "|V| is the number of vertices while |E| is the number of edges.<br>\n",
+    "\n",
+    "<b>Graph Algos</b><br>\n",
+    "<b>Common:</b> Breadth-first Search (BFS), Depth-first Search (DFS)<br>\n",
+    "<b>Uncommon:</b> Topological Sort, Dijkstra's Algorithm<br>\n",
+    "\n",
+    "<b>BFS: </b>graph traversal algorithm which starts at a node and explores all nodes at the present depth, before moving on to the nodes at the next depth level.<br>\n",
+    "Typically uses a <b>queue</b> to track visited nodes. Use double ended queues (deques in python) to get O(1) enqueueing. <br>\n",
+    "\n",
+    "<b>DFS: </b>graph traversal algorithm which explores as far as possible along each branch before backtracking.<br>\n",
+    "A <b>stack</b> is used to keep track of the nodes that are on the current search path. Either by an implicit recursion stack, or an actual stack data structure. <br>\n",
+    "\n",
+    "<b>Topological Sort: </b>a linear ordering of its vertices such that for every directed edge uv from vertex u to vertex v, u comes before v in the ordering. Precisely, a topological sort is a graph traversal in which each node v is visited only after all its dependencies are visited.<br>\n",
+    "Topological sorting is most commonly used for <b>job scheduling</b> a sequence of jobs or tasks which has dependencies on other jobs/tasks. The jobs are represented by vertices, and there is an edge from x to y if job x must be completed before job y can be started.<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "745128ca",
+   "execution_count": 31,
+   "id": "ef00a629",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topological Sort: [1, 2, 0, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "#BREADTH FIRST SEARCH IMPLEMENTATION\n",
+    "def bfs(matrix):\n",
+    "  if not matrix:\n",
+    "    return []\n",
+    "\n",
+    "  rows, cols = len(matrix), len(matrix[0])\n",
+    "  visited = set()\n",
+    "  directions = ((0, 1), (0, -1), (1, 0), (-1, 0))\n",
+    "\n",
+    "  def traverse(i, j):\n",
+    "    queue = deque([(i, j)])\n",
+    "    while queue:\n",
+    "      curr_i, curr_j = queue.popleft()\n",
+    "      if (curr_i, curr_j) not in visited:\n",
+    "        visited.add((curr_i, curr_j))\n",
+    "        # Traverse neighbors.\n",
+    "        for direction in directions:\n",
+    "          next_i, next_j = curr_i + direction[0], curr_j + direction[1]\n",
+    "          if 0 <= next_i < rows and 0 <= next_j < cols:\n",
+    "            # Add in question-specific checks, where relevant.\n",
+    "            queue.append((next_i, next_j))\n",
+    "\n",
+    "  for i in range(rows):\n",
+    "    for j in range(cols):\n",
+    "      traverse(i, j)\n",
+    "    \n",
+    "    \n",
+    "#DEPTH FIRST SEARCH IMPLEMENTATION\n",
+    "def dfs(matrix):\n",
+    "  if not matrix:\n",
+    "    return []\n",
+    "\n",
+    "  rows, cols = len(matrix), len(matrix[0])\n",
+    "  visited = set()\n",
+    "  directions = ((0, 1), (0, -1), (1, 0), (-1, 0))\n",
+    "\n",
+    "  def traverse(i, j):\n",
+    "    if (i, j) in visited:\n",
+    "      return\n",
+    "\n",
+    "    visited.add((i, j))\n",
+    "    # Traverse neighbors.\n",
+    "    for direction in directions:\n",
+    "      next_i, next_j = i + direction[0], j + direction[1]\n",
+    "      if 0 <= next_i < rows and 0 <= next_j < cols:\n",
+    "        # Add in question-specific checks, where relevant.\n",
+    "        traverse(next_i, next_j)\n",
+    "\n",
+    "  for i in range(rows):\n",
+    "    for j in range(cols):\n",
+    "      traverse(i, j)\n",
+    "\n",
+    "#TOPOLOGICAL SORT IMPLEMENTATION\n",
+    "def graph_topo_sort(num_nodes, edges):\n",
+    "    nodes, order, queue = {}, [], deque()\n",
+    "    for node_id in range(num_nodes):\n",
+    "        nodes[node_id] = { 'in': 0, 'out': set() }\n",
+    "    for node_id, pre_id in edges:\n",
+    "        nodes[node_id]['in'] += 1\n",
+    "        nodes[pre_id]['out'].add(node_id)\n",
+    "    for node_id in nodes.keys():\n",
+    "        if nodes[node_id]['in'] == 0:\n",
+    "            queue.append(node_id)\n",
+    "    while len(queue):\n",
+    "        node_id = queue.pop()\n",
+    "        for outgoing_id in nodes[node_id]['out']:\n",
+    "            nodes[outgoing_id]['in'] -= 1\n",
+    "            if nodes[outgoing_id]['in'] == 0:\n",
+    "                queue.append(outgoing_id)\n",
+    "        order.append(node_id)\n",
+    "    return order if len(order) == num_nodes else None\n",
+    "\n",
+    "\n",
+    "matrix = [[1, 4, 5, 6], \n",
+    "         [-5, 8, 9, 3],\n",
+    "         [-7, 1, 2, 0]] #a 3 by 4 matrix\n",
+    "bfs(matrix)\n",
+    "dfs(matrix)\n",
+    "print('Topological Sort:', graph_topo_sort(4, [[0, 1], [0, 2], [2, 1], [3, 0]]))"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "a624ea11",
+   "id": "4300ce29",
    "metadata": {},
    "source": [
     "***\n",
-    "# Hash Table// Hash Map\n",
+    "# Hash Table // Hash Map\n",
     "https://www.techinterviewhandbook.org/algorithms/hash-table/ <br><br>\n",
     "Key, value pairs. Hash function to compute index and place in array. Easy index lookup gives O(1) Search, Insert, AND Remove<br>\n",
     "Hash collisions: Resolved using Seperate Chaining (Linked List for each value) or Open Addressing (Next unoccupied slot)"
@@ -274,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1544d38c",
+   "id": "226a42e1",
    "metadata": {},
    "outputs": [
     {
