--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -508,6 +508,290 @@
     "dict.clear()\n",
     "print(dict)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f71859ec",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Recursion\n",
+    "https://www.techinterviewhandbook.org/algorithms/recursion/ <br><br>\n",
+    "\n",
+    "Solving a big problem by solving many smaller problems. Two parts necessary for recursion: A base case to define when recursion should stop and a recursive call that breaks the problem down into smaller subproblems.<br><br>\n",
+    "\n",
+    "<b>Recursive Algorithms:</b> Binary Search, Merge Sort, Tree Traversal, DFS<br>\n",
+    "<b>Memoization:</b> Storing previously computed results (other fib values) to use again without calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ea88cd6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib(n):\n",
+    "  if n <= 1:\n",
+    "    return n\n",
+    "  return fib(n - 1) + fib(n - 2)\n",
+    "\n",
+    "print(fib(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32f532e9",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Linked List\n",
+    "https://www.techinterviewhandbook.org/algorithms/linked-list/ <br><br>\n",
+    "\n",
+    "A data structure consisting of a collection of nodes which together represent a sequence.<br>\n",
+    "<b>O(1)</b> insertion and deletion of a node in the list\n",
+    "<b>O(n)</b> Access and search<br><br>\n",
+    "\n",
+    "<b>Types of Linked Lists</b><br>\n",
+    "<b>Singly:</b> Each node points to next and the last points to null. <br>\n",
+    "<b>Doubly:</b> Each node has NEXT and PREV. PREV of first and NEXT of last point to null. <br>\n",
+    "<b>Circular:</b> Singly linked list where LAST points to FIRST <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1f7d7add",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "7\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class singlyNode:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        \n",
+    "class doublyNode:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "        \n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "    \n",
+    "    def printList(self):\n",
+    "        temp = self.head\n",
+    "        while (temp):\n",
+    "            print(temp.data)\n",
+    "            temp = temp.next\n",
+    "        \n",
+    "llist = LinkedList()\n",
+    "llist.head = Node(1)\n",
+    "second = Node(7)\n",
+    "third = Node(4)\n",
+    "\n",
+    "\n",
+    "llist.head.next = second\n",
+    "second.next = third\n",
+    "\n",
+    "llist.printList()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcadbb31",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Queue\n",
+    "https://www.techinterviewhandbook.org/algorithms/queue/ <br><br>\n",
+    "\n",
+    "<b>Enqueue</b> on one end and <b>dequeue</b> on the other. Typically add to the back and remove from the head/front.<br>\n",
+    "Can be implemented using arrays or singly linked lists. <b>FIFO</b> (First In, First Out) behavior. Used in BFS. <br>\n",
+    "<b>O(1)</b> time complexity for Enqueue, Dequeue, Front, Back, and isEmpty operations. <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6b5034c9",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Include and Initialize\n",
+    "from queue import Queue\n",
+    "q = Queue()\n",
+    "\n",
+    "#Put, empty, get\n",
+    "q.put(1)\n",
+    "q.put(2)\n",
+    "q.put(3)\n",
+    "print(q.empty())\n",
+    "\n",
+    "pop = []\n",
+    "q.get()\n",
+    "q.get()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "820d55a9",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Stack\n",
+    "https://www.techinterviewhandbook.org/algorithms/stack/ <br><br>\n",
+    "\n",
+    "<b>LIFO</b> (Last In, First Out) behavior. The newest element pushed to the stack is the first element popped from the stack<br>\n",
+    "Important way to support nesting, recursive calls, and implement DFS manually. <b>O(1)</b> operations except <b>O(n)</b> search.<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "47e022d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial Stack ['a', 'b', 'c']\n",
+      "\n",
+      "Elements popped from stack:\n",
+      "c\n",
+      "b\n",
+      "\n",
+      "Stack after elements are popped:\n",
+      "['a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "stack = []\n",
+    "stack.append('a')\n",
+    "stack.append('b')\n",
+    "stack.append('c')\n",
+    "print('Initial Stack', stack)\n",
+    "\n",
+    "print('\\nElements popped from stack:')\n",
+    "print(stack.pop())\n",
+    "print(stack.pop())\n",
+    "\n",
+    "print('\\nStack after elements are popped:')\n",
+    "print(stack)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22588fa8",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Heap\n",
+    "https://www.techinterviewhandbook.org/algorithms/heap/ <br><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3768a382",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "962a9ca1",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Trie\n",
+    "https://www.techinterviewhandbook.org/algorithms/trie/ <br><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9e5ca02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5e78c6a",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Interval\n",
+    "https://www.techinterviewhandbook.org/algorithms/interval/ <br><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df5856a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6473d416",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Dynamic Programming\n",
+    "https://www.techinterviewhandbook.org/algorithms/dynamic-programming/ <br><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2e29da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
