--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f71859ec",
+   "id": "67211bab",
    "metadata": {},
    "source": [
     "***\n",
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea88cd6f",
+   "id": "3452c953",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f532e9",
+   "id": "5661f5d0",
    "metadata": {},
    "source": [
     "***\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1f7d7add",
+   "id": "bb904be5",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcadbb31",
+   "id": "b4fdd4cc",
    "metadata": {},
    "source": [
     "***\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6b5034c9",
+   "id": "7f0ad8fa",
    "metadata": {
     "scrolled": true
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820d55a9",
+   "id": "846fc03c",
    "metadata": {},
    "source": [
     "***\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "47e022d8",
+   "id": "d76629eb",
    "metadata": {},
    "outputs": [
     {
@@ -723,75 +723,179 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22588fa8",
+   "id": "f44d6246",
    "metadata": {},
    "source": [
     "***\n",
     "# Heap\n",
-    "https://www.techinterviewhandbook.org/algorithms/heap/ <br><br>"
+    "https://www.techinterviewhandbook.org/algorithms/heap/ <br><br>\n",
+    "\n",
+    "A heap is a specialized tree-based data structure which is a complete tree that satisfies the heap property.<br>\n",
+    "<b>Max heap:</b> the value of a node must be greatest among the node values in its entire subtree. The same property must be recursively true for all nodes in the tree.<br>\n",
+    "<b>Min heap:</b>  the value of a node must be smallest among the node values in its entire subtree. The same property must be recursively true for all nodes in the tree.<br><br>\n",
+    "\n",
+    "Heaps and Priority Queues can be treated as the same for algo interviews. Heap is a useful data structure when it is necessary to repeatedly remove the object with the highest (or lowest) priority, or when insertions need to be interspersed with removals of the root node. <br><br>\n",
+    "\n",
+    "<b>Mention of K:</b> if a problem mentions a top or lowest k, it is usually a signal to use heap, such as Top K Frequent Elements.<br>\n",
+    "If you require the top k elements use a Min Heap of size k. Iterate through each element, pushing it into the heap. Whenever the heap size exceeds k, remove the minimum element, that will guarantee that you have the k largest elements.<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3768a382",
+   "execution_count": 22,
+   "id": "b71c74c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 9, 7, 5]\n",
+      "[1, 3, 4, 7, 5, 9]\n",
+      "[3, 5, 4, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Import\n",
+    "import heapq\n",
+    "h = [5, 7, 9, 1, 3]\n",
+    "\n",
+    "#Heapify converts from list to heap\n",
+    "heapq.heapify(h)\n",
+    "print(h)\n",
+    "\n",
+    "#Push elements into heap, they will maintain heap propert\n",
+    "heapq.heappush(h, 4)\n",
+    "print(h)\n",
+    "\n",
+    "#Pop min element from heap\n",
+    "heapq.heappop(h)\n",
+    "print(h)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "962a9ca1",
+   "id": "70a9c95f",
    "metadata": {},
    "source": [
     "***\n",
     "# Trie\n",
-    "https://www.techinterviewhandbook.org/algorithms/trie/ <br><br>"
+    "https://www.techinterviewhandbook.org/algorithms/trie/ <br><br>\n",
+    "\n",
+    "Tries are special trees (prefix trees) that make searching and storing strings more efficient. Tries have many practical applications, such as conducting searches and providing autocomplete. It is helpful to know these common applications so that you can easily identify when a problem can be efficiently solved using a trie.<br><br>\n",
+    "\n",
+    "<b>O(m)</b> Search, Insert, and Remove, where 'm' is the length of the string used in the operation.<br>\n",
+    "Typically used in questions using 'word' in the title: Add and Search Word, Word Break, Word Search, etc.<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e9e5ca02",
+   "execution_count": 24,
+   "id": "b7767fdd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Leetcode \"Implement Trie\" self solution\n",
+    "class Node:\n",
+    "    def __init__(self, char):\n",
+    "        self.char = char\n",
+    "        self.is_end = False\n",
+    "        self.children = {} #Dict: keys for char, value for node\n",
+    "\n",
+    "class Trie:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.root = Node('')\n",
+    "\n",
+    "    #Move as far into word as possible, make new char nodes if necessary\n",
+    "    def insert(self, word: str) -> None:\n",
+    "        node = self.root\n",
+    "        \n",
+    "        for char in word:\n",
+    "            if char in node.children:\n",
+    "                node = node.children[char]\n",
+    "            else:\n",
+    "                new_node = Node(char)\n",
+    "                node.children[char] = new_node\n",
+    "                node = new_node\n",
+    "        \n",
+    "        #Current node is last node of word\n",
+    "        node.is_end = True\n",
+    "\n",
+    "    #Returns true if word is fully in trie\n",
+    "    def search(self, word: str) -> bool:\n",
+    "        node = self.root\n",
+    "        \n",
+    "        for char in word: \n",
+    "            if char in node.children:\n",
+    "                node = node.children[char]\n",
+    "            else:\n",
+    "                return False\n",
+    "        \n",
+    "        if node.is_end == True:\n",
+    "            return True\n",
+    "    \n",
+    "    #Returns true if words are inserted with searched prefix\n",
+    "    def startsWith(self, prefix: str) -> bool:\n",
+    "        node = self.root\n",
+    "        \n",
+    "        for char in prefix:\n",
+    "            if char in node.children:\n",
+    "                node = node.children[char]\n",
+    "            else:\n",
+    "                return False\n",
+    "        return True"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "c5e78c6a",
+   "id": "e6c075bc",
    "metadata": {},
    "source": [
     "***\n",
     "# Interval\n",
-    "https://www.techinterviewhandbook.org/algorithms/interval/ <br><br>"
+    "https://www.techinterviewhandbook.org/algorithms/interval/ <br><br>\n",
+    "\n",
+    "Interval questions are a subset of array questions where you are given an array of two-element arrays (an interval) and the two values represent a start and an end value.<br>\n",
+    "An example interval array: [[1, 2], [4, 7]]. Questions can be tricky because of the sheer number of cases to consider when intervals overlap.<br>\n",
+    "\n",
+    "<b>Sort By Start:</b> A common routine for interval questions is to sort the array of intervals by each interval's starting value.<br>\n",
+    "<b>Check Overlap</b> and <b>Merging Two Intervals</b> helpful to know"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df5856a4",
+   "execution_count": 27,
+   "id": "9b072d1d",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6473d416",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "***\n",
-    "# Dynamic Programming\n",
-    "https://www.techinterviewhandbook.org/algorithms/dynamic-programming/ <br><br>"
+    "intervalOne =  [[1, 2], [4, 7]];\n",
+    "intervalTwo = [[1,5], [3,8]];\n",
+    "\n",
+    "def is_overlap(a, b):\n",
+    "    return a[0] < b[1] and b[0] < a[1]\n",
+    "\n",
+    "def merge_overlapping_intervals(a, b):\n",
+    "    return [min(a[0], b[0]), max(a[1], b[1])]\n",
+    "\n",
+    "#is_overlap will return false as there is a gap between 2 and 4\n",
+    "if is_overlap(intervalOne[0], intervalOne[1]):\n",
+    "    print(merge_overlapping_intervals(intervalOne[0], intervalOne[1]))\n",
+    "\n",
+    "#Will return true as there is no gap between 5 and 3. Merge will then look for the smallest between 1,3 and largest between 5,8\n",
+    "if is_overlap(intervalTwo[0], intervalTwo[1]):\n",
+    "    print(merge_overlapping_intervals(intervalTwo[0], intervalTwo[1]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b2e29da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
