--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -896,6 +896,134 @@
     "if is_overlap(intervalTwo[0], intervalTwo[1]):\n",
     "    print(merge_overlapping_intervals(intervalTwo[0], intervalTwo[1]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c035dbfb",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Dynamic Programming\n",
+    "https://www.techinterviewhandbook.org/algorithms/dynamic-programming/<br>\n",
+    "https://leetcode.com/explore/learn/card/dynamic-programming/<br><br>\n",
+    "\n",
+    "### Framework for DP problems\n",
+    "1. Identify a \"state\" (a set of variables that can sufficiently describe a scenario. ONLY  relevant ones)\n",
+    "To further solve a DP problem after identifying state, we combine 3 things\n",
+    "2. A function or data structure that will compute/contain the answer to the problem for every given state.\n",
+    "3. A recurrence relation (an equation that relates different states with each other) to transition between states.\n",
+    "4. Base cases, so that our recurrence relation doesn't go on infinitely.\n",
+    "\n",
+    "\n",
+    "#### Framework Applied to Climbing Stairs\n",
+    "'Climbing Stairs' LC Easy problem #70\n",
+    "1. Only 1 relevant state variable, the current step. We will use 'i'. If i=6, then we are on step 6. Every unique of 'i' is a unique state.\n",
+    "2. We will use a function dp where dp(i) returns the # of ways to climb to the ith step. As easy as 'return dp(n)'. As for data structures, top-down is typically implemented with a recursive function and hash map, wherease bottom-up is implemented with nested for loops and an array.\n",
+    "3. To get to the 30th stair, we need to know the number of ways to get to the 28th + the number of ways to get to the 29th. This logic can define the recurrence relation as dp(i) = dp(i-1) + dp(i-2). For 'Climbing Stairs' the relation is the fibonacci sequence. Typically this relation is much more complicated and finding it is the most difficult part of solving the problem.\n",
+    "4. To find base cases, ask yourself \"What states can I find the answer without DP?\" If we can only take 1 or 2 steps, then the base cases are dp(1) = 1 and dp(2) = 2. All other cases can be simplified to these eventual bases.\n",
+    "\n",
+    "#### Framework Applied to House Robber\n",
+    "'House Robber' LC Medium Problem #198\n",
+    "1. 'i' is the current house index and only relevant state.\n",
+    "2. With one state variable and a top-down approach we can use dp(i). Where dp returns the maximum amount of money you can rob up to house 'i' while not triggering the police. A hash map (HouseIndex, totalRobbed) for memoization. Calling dp() on the arr length - 1 will provide the overall problem solution.\n",
+    "3. The reccurence relation is dp(i) = max(dp(i-1),dp(i-2)+nums[i]). This formula uses whichever is larger, robbing the previous house or robbing this one.\n",
+    "4. If we only have one house, we rob it. If we have two, we rob the richer. dp(0) = nums[0] and dp(1) = max(nums[0], nums[1])\n",
+    "\n",
+    "#### Framework Applied to Min Cost Climbing Stairs\n",
+    "1. 'i' the current step, is the only relevant state variable.\n",
+    "2. dp(i) will return the min cost to reach that step. Memoization with hash map.\n",
+    "3. Recurrence: dp(i) = cost[i] + min(dp(i-1), dp(i-2)). We want the minimum cost to get to the current step taking 1 or 2 stairs per step.\n",
+    "4. Base cases: dp(0) = cost[0], dp(1) = cost[1]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "56351d0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of ways to climb 30 stairs: 1346269\n",
+      "Max Money Robbing [2, 7, 9, 3, 1, 6, 31, 15] : $ 43\n",
+      "Min Cost Climbing [2, 7, 9, 3, 1, 6, 31, 15] : 31\n",
+      "Maximal Square of matrix: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Climbing Stairs\n",
+    "def climbStairs(n):\n",
+    "    def dp(i):\n",
+    "        if i<=2: #Base case\n",
+    "            return i\n",
+    "        if i not in memo: #Memoization\n",
+    "            memo[i] = dp(i-1) + dp(i-2)\n",
+    "        return memo[i]\n",
+    "    \n",
+    "    memo = {}\n",
+    "    return dp(n)\n",
+    "\n",
+    "#House Robber\n",
+    "def rob(nums):\n",
+    "    def dp(i):\n",
+    "        if i == 0:\n",
+    "            return nums[0]\n",
+    "        if i == 1:\n",
+    "            return max(nums[0], nums[1])\n",
+    "        if i not in memo:\n",
+    "            memo[i] = max(dp(i-1), dp(i-2) + nums[i])\n",
+    "        return memo[i]\n",
+    "    memo = {}\n",
+    "    return dp(len(nums)-1)\n",
+    "\n",
+    "#Min Cost Climbing Stairs\n",
+    "def minCostClimbingStairs(cost):\n",
+    "    def dp(i):\n",
+    "        if i < 2: #Base cases\n",
+    "            return cost[i]\n",
+    "        if i not in memo: #Recurrence\n",
+    "            memo[i] = cost[i] + min(dp(i-1), dp(i-2))\n",
+    "        return memo[i]\n",
+    "\n",
+    "    memo = {}\n",
+    "    end = len(cost)-1\n",
+    "    return min(dp(end), dp(end-1)) #The 'top' of stairs is above final index. Return min of final step and final-1.\n",
+    "\n",
+    "#Maximal Square\n",
+    "def maximalSquare(matrix):\n",
+    "    rows, cols = len(matrix), len(matrix[0])\n",
+    "    cache = {} #(r,c) -> maxSideLength\n",
+    "\n",
+    "    # T: O(m*n)\n",
+    "    # M: O(m*n)\n",
+    "    def helper(r, c):\n",
+    "        if r >= rows or c >= cols:\n",
+    "            return 0\n",
+    "        if (r, c) not in cache:\n",
+    "            down = helper(r + 1, c)\n",
+    "            right = helper(r, c + 1)\n",
+    "            diag = helper(r + 1, c + 1)\n",
+    "\n",
+    "            cache[(r,c)] = 0\n",
+    "            if matrix[r][c] == '1':\n",
+    "                cache[(r,c)] = 1 + min(down, right, diag)\n",
+    "\n",
+    "        return cache[(r,c)]\n",
+    "\n",
+    "    helper(0, 0)\n",
+    "    return max(cache.values()) ** 2\n",
+    "\n",
+    "\n",
+    "nums = [2,7,9,3,1,6,31,15]\n",
+    "matrix = [[\"1\",\"1\",\"1\",\"0\",\"0\"],[\"1\",\"1\",\"1\",\"1\",\"1\"],[\"1\",\"1\",\"1\",\"1\",\"1\"],[\"1\",\"0\",\"0\",\"1\",\"0\"]]\n",
+    "print('Number of ways to climb 30 stairs:', climbStairs(30))\n",
+    "print('Max Money Robbing', nums, ': $', rob(nums))\n",
+    "print('Min Cost Climbing', nums, ':', minCostClimbingStairs(nums))\n",
+    "print('Maximal Square of matrix:', maximalSquare(matrix))"
+   ]
   }
  ],
  "metadata": {
